<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">掌上绿源</string>
    <string name="post">回首页</string>
    <string name="function">潮流车</string>
    <string name="account">看产品</string>
    <string name="setting">看技术</string>
    <string name="search">搜索</string>
    <string name="empty">空白</string>
    <string name="luxury">豪华款</string>
    <string name="simple">简易款</string>
    <string name="standard">标准款</string>
    <string name="battery">锂电款</string>
    <string name="replacewalk">代步车</string>
    <string name="special">特种车</string>
    <string name="car_appearance">外形外观</string>
    <string name="car_detail">产品详情</string>
    <string name="optional_color">可选颜色</string>
    <string name="car_tech">技术参数</string>
    <string name="car_equipment">整车配置</string>
    <string name="back">返回</string>

    <string name="info_model">型号：</string>
    <string name="info_battery">电池：</string>
    <string name="info_endurance">续航：</string>
    <string name="info_series">系列：</string>

    <string name="arrivaldate">上市时间：</string>
    <string name="footsteplength">脚踏板长度：</string>
    <string name="liftofflength">盘底离地：</string>
    <string name="endurance">续航里程：</string>
    <string name="tyreform">轮胎形式：</string>
    <string name="tyrespec">轮胎规格：</string>
    <string name="brake">制动系统：</string>
    <string name="suspension">避震系统：</string>
    <string name="enginespec">电机规格：</string>
    <string name="batteryspec">电池规格：</string>
    <string name="charger">充电器：</string>

    <string name="goto_home">回首页</string>
    <string name="goto_product">看产品</string>
    <string name="goto_popular">潮流车</string>
    <string name="goto_tech">看技术</string>
    <string name="goto_luyuan">看绿源</string>

    <string name="go_into_luyuan">走进绿源</string>
    <string name="band_history">品牌历史</string>
    <string name="band_honor">品牌荣誉</string>
    <string name="latest_news">最新资讯</string>

    <string name="network_disconnected">您的网络链接存在问题，请保证网络通畅以后，再重新尝试。</string>
    <string name="fetch_data_error">应用程序读取数据失败，请稍后再试。</string>
    <string name="fetch_data_empty">暂未添加图片，请稍后再试。</string>
    <string name="app_param_error">应用程序页面参数传输出错，请稍后再试。</string>
    <string name="dialog_hint">提示</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>

    <string name="dialog_hint_new_version">系统有新版本发布，需要现在更新？</string>
    <string name="dialog_downloading_file">正在下载更新文件...</string>
    <string name="dialog_download_error">下载更新文件失败，请稍后再试。</string>

</resources>
