<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:paddingTop="100dp"
        android:paddingBottom="100dp"
        android:paddingLeft="300dp"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:textSize="20dp"
                android:layout_gravity="right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/arrivaldate" />

            <TextView
                android:id="@+id/textview_product_detail_tech_arrivaldate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20dp"
                android:layout_gravity="left"
                android:text="@string/car_tech" />

        </TableRow>

        <TableRow>

            <TextView
                android:textSize="20dp"
                android:layout_gravity="right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/footsteplength" />

            <TextView
                android:id="@+id/textview_product_detail_tech_footsteplength"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20dp"
                android:layout_gravity="left"
                android:text="@string/car_tech" />

        </TableRow>

        <TableRow>

            <TextView
                android:textSize="20dp"
                android:layout_gravity="right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/liftofflength" />

            <TextView
                android:id="@+id/textview_product_detail_tech_liftofflength"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20dp"
                android:layout_gravity="left"
                android:text="@string/car_tech" />

        </TableRow>

        <TableRow>

            <TextView
                android:textSize="20dp"
                android:layout_gravity="right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/endurance" />

            <TextView
                android:id="@+id/textview_product_detail_tech_endurance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20dp"
                android:layout_gravity="left"
                android:text="@string/car_tech" />

        </TableRow>

        <TableRow>

            <TextView
                android:textSize="20dp"
                android:layout_gravity="right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tyreform" />

            <TextView
                android:id="@+id/textview_product_detail_tech_tyreform"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20dp"
                android:layout_gravity="left"
                android:text="@string/car_tech" />

        </TableRow>

        <TableRow>

            <TextView
                android:textSize="20dp"
                android:layout_gravity="right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tyrespec" />

            <TextView
                android:id="@+id/textview_product_detail_tech_tyrespec"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20dp"
                android:layout_gravity="left"
                android:text="@string/car_tech" />

        </TableRow>

        <TableRow>

            <TextView
                android:textSize="20dp"
                android:layout_gravity="right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/brake" />

            <TextView
                android:id="@+id/textview_product_detail_tech_brake"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20dp"
                android:layout_gravity="left"
                android:text="@string/car_tech" />

        </TableRow>

        <TableRow>

            <TextView
                android:textSize="20dp"
                android:layout_gravity="right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/suspension" />

            <TextView
                android:id="@+id/textview_product_detail_tech_suspension"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20dp"
                android:layout_gravity="left"
                android:text="@string/car_tech" />

        </TableRow>

        <TableRow>

            <TextView
                android:textSize="20dp"
                android:layout_gravity="right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enginespec" />

            <TextView
                android:id="@+id/textview_product_detail_tech_enginespec"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20dp"
                android:layout_gravity="left"
                android:text="@string/car_tech" />

        </TableRow>

        <TableRow>

            <TextView
                android:textSize="20dp"
                android:layout_gravity="right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/batteryspec" />

            <TextView
                android:id="@+id/textview_product_detail_tech_batteryspec"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20dp"
                android:layout_gravity="left"
                android:text="@string/car_tech" />

        </TableRow>

        <TableRow>

            <TextView
                android:textSize="20dp"
                android:layout_gravity="right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/charger" />

            <TextView
                android:id="@+id/textview_product_detail_tech_charger"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20dp"
                android:layout_gravity="left"
                android:text="@string/car_tech" />

        </TableRow>

    </TableLayout>

</LinearLayout>